added toy initial model and toy details

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -10,6 +10,8 @@
 
 /* Components */
 @import "cmps/app-header.css";
+@import "cmps/toy-list.css";
+@import "cmps/toy-preview.css";
 @import "cmps/app-footer.css";
 
 .popup-menu {
