adding more filter and css

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -10,8 +10,10 @@
 
 /* Components */
 @import "cmps/app-header.css";
+@import "cmps/toy-index.css";
 @import "cmps/toy-list.css";
 @import "cmps/toy-preview.css";
+@import "cmps/toy-filter.css";
 @import "cmps/app-footer.css";
 
 .popup-menu {
@@ -26,3 +28,30 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+.multi-select {
+    position: relative;
+  }
+  
+  .multi-select .selected-options-container {
+    display: flex;
+    gap: 5px;
+  }
+  
+  .multi-select .options-container {
+    display: none;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+  }
+  
+  .multi-select .options-container.open {
+    display: unset;
+  }
+  
+  
+  .multi-select .options-container>* {
+    padding: 5px;
+    border: 1px solid black;
+    background: white;
+  }
