--- a/src/assets/style/cmps/toy-list.css
+++ b/src/assets/style/cmps/toy-list.css
@@ -1,16 +1,18 @@
 .toy-list{
-    margin: 20px;
+    margin: 20px 100px;
     display: flex;
-    flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
-    flex-wrap: wrap;
+    gap: 20px;
 }
+
 .toy-list ul{
    list-style: none;
    margin: 0;
    padding: 0;
-
+   display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
 
