--- a/src/assets/style/cmps/toy-preview.css
+++ b/src/assets/style/cmps/toy-preview.css
@@ -1,4 +1,19 @@
 .toy-preview {
+    min-width: 100px;
+    height: 200px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    padding: 5px 10px;
+    border: 2px lightgray solid;
+    border-radius: 0.5rem;
+}
+.toy-preview .hidden-btns{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px 10px;
+}
+.toy-preview .hidden-btns button{
+    margin: 0;
 }
